# retriever

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml  test.yml
include/: retriever.h
resources/: version.rc.in
scripts/: register-startup.ps1
src/cli/: cli.h  ipc_client.c  main.c
src/common/: plat.c  plat.h  proto.h
src/core/: core.h  index.c  re.c  search.c
src/svc/: ipc_server.c  main.c  svc.h  tray_win.c  vol_win.c
tests/: re_test.c
